test/fixtures/invalid/test-js-missing-brace.fez
<script>
  onInit() {
    this.state.active = false
    if (true) {
      console.log('test')
    // missing closing brace
  }
</script>

<div>Active: {{ state.active }}</div>
